# Rift-plus

Rift-plus-app/: build.gradle  local.properties  settings.gradle
Rift-plus-app/app/: build.gradle
Rift-plus-app/app/src/main/: AndroidManifest.xml
Rift-plus-app/app/src/main/java/com/yourapp/: MainActivity.kt
Rift-plus-app/app/src/main/java/com/yourapp/display/: CameraSource.kt  RiftPresentation.kt  VideoDecoder.kt
Rift-plus-app/app/src/main/java/com/yourapp/network/: UdpSender.kt
Rift-plus-app/app/src/main/java/com/yourapp/usb/: HidReader.kt  RiftUsbManager.kt
Rift-plus-app/app/src/main/res/layout/: activity_main.xml
Rift-plus-app/app/src/main/res/values/: strings.xml
Rift-plus-app/app/src/main/res/xml/: usb_device_filter.xml
Rift-plus-bridge/: CMakeLists.txt
Rift-plus-bridge/include/common/: SharedPose.hpp  protocol.hpp
Rift-plus-bridge/include/core/: BridgeEngine.hpp  Common.hpp
Rift-plus-bridge/include/network/: TelemetryReceiver.hpp  VideoStreamer.hpp
Rift-plus-bridge/include/video/: FrameCapturer.hpp  H264Encoder.hpp  PoseFilter.hpp  VideoEncoder.hpp
Rift-plus-bridge/src/: main.cpp
Rift-plus-bridge/src/core/: BridgeEngine.cpp
Rift-plus-bridge/src/network/: TelemetryReceiver.cpp  VideoStreamer.cpp
Rift-plus-bridge/src/video/: FrameCapturer.cpp  H264Encoder.cpp  VideoEncoder.cpp
Rift-plus-driver/: CDeviceDriver.cpp  CMakeLists.txt  CWatchdogDriver.cpp  driver.vrguide  driver_rsplus.cpp
Rift-plus-driver/include/: CDeviceDriver.hpp  CWatchdogDriver.hpp
